[package]
name = "slpdex-backend"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

#[lib]
#name = "slpdex_backend"
#crate-type = ["cdylib"]

[dependencies]
cashcontracts = {"path"="../cashcontracts"}
byteorder = "1.3.2"
hex = "0.3.2"
hex-literal = "0.2.0"
base64 = "0.10.1"
rand = "0.7.0"
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
chrono = "0.4.7"
reqwest = "0.9.19"
itertools = "0.8.0"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
json = "0.11.14"
num-traits = "0.2"
num-derive = "0.2"
error-chain = "0.12.1"

[dependencies.rug]
version = "1.5.1"
default-features = false
features = ["float", "integer", "rational"]

#[dependencies.pyo3]
#version = "0.7.0"
#features = ["extension-module"]
