[package]
name = "slpdexdb_base"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cashcontracts = {"path"="../../cashcontracts"}
byteorder = "1.3.2"
base64 = "0.10.1"
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
chrono = "0.4.7"
error-chain = "0.12.1"
hex = "0.3.2"
hex-literal = "0.2.0"
reqwest = "0.9.19"
actix = "0.8.3"

[dependencies.rug]
version = "1.5.1"
default-features = false
features = ["integer", "rational"]
