[package]
name = "slpdexdb_endpoint"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cashcontracts = {"path"="../../cashcontracts"}
slpdexdb_base = {"path"="../slpdexdb_base"}
slpdexdb_db = {"path"="../slpdexdb_db"}
slpdexdb_node = {"path"="../slpdexdb_node"}

tokio-tcp = "0.1.3"
actix = "0.8.3"
actix-web = "1.0.5"
actix-web-actors = "1.0.2"
json = "0.11.14"
futures = "0.1.28"
diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4.7"
hex = "0.3.2"
env_logger = "0.6.2"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
