[package]
name = "slpdexdb_node"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cashcontracts = {"path"="../../cashcontracts"}
slpdexdb_base = {"path"="../slpdexdb_base"}
byteorder = "1.3.2"
hex = "0.3.2"
actix = "0.8.3"
tokio-io = "0.1.12"
tokio-tcp = "0.1.3"
tokio-codec = "0.1.1"
futures = "0.1.28"
rand = "0.7.0"
bytes = "0.4.12"
